--- a/first_lab/config/config.ini
+++ b/first_lab/config/config.ini
@@ -1,9 +1,12 @@
 [Request-Header]
 accept_lan=zh-CN,zh;q=0.9,en;q=0.8
-accept_info=text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b
+accept_info=text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3
 connection=keep-alive
 accept_code=gzip, deflate, br
-timeout=5
+Cache-control=no-cache
+If-None-Match=73df252615592867959141663e
+If-Modified-Since=Thu, 19 Nov 1981 08:52:00 GMT
+Referer=http://www.qichacha.com
 orderno=ZF20195296647gbl7yy
 secret=aedad34bf749470c8aed04e7e95829c5
 ip_port=forward.xdaili.cn:80
